--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -3,6 +3,8 @@
 *{
     margin:0;
     transition: 0.4s all ease;
+    font-family: "Inter", sans-serif;
+
 
 }
 
@@ -88,7 +90,10 @@ html{
     background-color: #2c2f33;
     display: flex;
     transition: 0.4s all ease;
-    height: 100vh;
+    height: 150vh;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
 }
 .contact{
     background-color: #23272a;
@@ -160,4 +165,33 @@ html{
     font-size: 20px;
     transition: 0.4s all ease;
     color:  #ff3130;
+}
+.madina{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 120vh;
+}
+.madina a{
+    color: white;
+    text-decoration: none;
+}
+.madina img{
+    width: 140px;
+    border-radius: 100px;
+    box-shadow: 0 0 90px #ff3130;
+
+}
+.body-5 .title{
+    color: #ff3130;
+}
+.madina .img{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.madina .img a{
+    font-size: 50px;
+    color: #ff3130;
 }
