--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -1,24 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-*{
-    margin:0;
+* {
+    margin: 0;
     transition: 0.4s all ease;
     font-family: "Inter", sans-serif;
     transition: 0.4s all ease;
 
 }
 
-html{
+html {
     display: flex;
     transition: 0.4s all ease;
 
 
 }
-.div{
+
+.div {
     transition: 0.4s all ease;
 }
 
-.body-1{
+.body-1 {
     background-color: #2c2f33;
     display: flex;
     justify-content: space-around;
@@ -27,32 +28,37 @@ html{
     align-items: center;
     color: white;
 }
-.body-1 .imghome img{
+
+.body-1 .imghome img {
     border-radius: 100px;
     box-shadow: 0 0 90px #ff3130;
     transition: 0.4s all ease;
 }
 
-.body-1 .text h1{
+.body-1 .text h1 {
     color: rgb(255, 255, 255);
     font-size: xx-large;
 }
-.body-1 .text h1 a{
+
+.body-1 .text h1 a {
     text-align: center;
     text-decoration: none;
     color: #ff3130;
 }
-.sottotitolo{
+
+.sottotitolo {
     color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: xxx-large;
 }
-.body-1 .text .elenco{
-    color:#ff3130;
+
+.body-1 .text .elenco {
+    color: #ff3130;
     text-decoration: none;
     font-size: xx-large;
 }
-.nav{
+
+.nav {
     display: flex;
     width: 209vh;
     height: 10vh;
@@ -63,37 +69,43 @@ html{
     transition: 0.5s all ease;
 
 }
-.nav h1{
+
+.nav h1 {
     color: antiquewhite;
     transition: 0.4s all ease;
 
 }
-.nav img{
+
+.nav img {
     width: 80px;
     border-radius: 100px;
     transition: 0.4s all ease;
 
 }
-.body-2{
+
+.body-2 {
     display: flex;
     height: 100vh;
     transition: 0.4s all ease;
     background-color: #23272a;
 }
-.body-3{
+
+.body-3 {
     background-color: #2c2f33;
     display: flex;
     transition: 0.4s all ease;
     height: 100vh;
 }
-.body-4{
+
+.body-4 {
     display: flex;
     height: 100vh;
     background-color: #23272a;
     transition: 0.4s all ease;
 
 }
-.body-5{
+
+.body-5 {
     background-color: #2c2f33;
     display: flex;
     transition: 0.4s all ease;
@@ -102,7 +114,8 @@ html{
     align-items: center;
     flex-direction: column;
 }
-.contact{
+
+.contact {
     background-color: #23272a;
     height: 35vh;
     display: flex;
@@ -114,95 +127,109 @@ html{
     transition: 0.4s all ease;
 
 }
-.contact img{
+
+.contact img {
     width: 70px;
     padding: 10px;
     transition: 0.4s all ease;
 
 }
-.contact a{
+
+.contact a {
     text-decoration: none;
     color: rgb(255, 255, 255);
     padding: 10px;
     font-family: "Inter", sans-serif;
-    
+
 }
 
-.contact img:hover{
+.contact img:hover {
     width: 80px;
     transition: 0.4s all ease;
 }
-.contact a:hover{
-    color:  #ff3130;
+
+.contact a:hover {
+    color: #ff3130;
     transition: 0.9s all ease;
     font-size: large;
 }
 
-.sin{
+.sin {
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.4s all ease;
 }
-.sin:hover{
+
+.sin:hover {
     transition: 0.4s all ease;
     font-size: large;
 }
-.sin h1:hover{
-    color:  #ff3130;
+
+.sin h1:hover {
+    color: #ff3130;
     transition: 0.4s all ease;
 
 }
-.des{
+
+.des {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
-    width: 370px;  
+    width: 370px;
     transition: 0.4s all ease;
 }
 
-.des a{
+.des a {
     color: white;
     text-decoration: none;
     font-family: "Inter", sans-serif;
     font-size: large;
     transition: 0.4s all ease;
 }
-.des a:hover{
+
+.des a:hover {
     font-size: 20px;
     transition: 0.4s all ease;
-    color:  #ff3130;
+    color: #ff3130;
 }
-.madina{
+
+.madina {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 120vh;
 }
-.madina a{
+
+.madina a {
     color: white;
     text-decoration: none;
 }
-.madina img{
+
+.madina img {
     width: 140px;
     border-radius: 100px;
     box-shadow: 0 0 90px #ff3130;
 
 }
-.body-5 .title{
+
+.body-5 .title {
     color: #ff3130;
 }
-.madina .img{
+
+.madina .img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
-.madina .img a{
+
+.madina .img a {
     font-size: 50px;
     color: #ff3130;
 }
-.button a{
+
+.button a {
     background-color: #ff3130;
     padding: 10px;
     border-radius: 100px;
@@ -210,31 +237,34 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size:x-large;
+    font-size: x-large;
     box-shadow: 0 0 30px #ff3130;
 
 }
-.button a{
+
+.button a {
     font-size: 27px;
     text-decoration: none;
     color: white;
 }
-.button a::after{
+
+.button a::after {
     font-size: 27px;
     text-decoration: none;
     color: white;
     transition: 0.4s all ease;
 
 }
-.button a:hover{
+
+.button a:hover {
     display: flex;
     width: 210px;
     height: 40px;
     transition: 0.4s all ease;
-    font-size:30px ;
+    font-size: 30px;
 }
 
-.des2 a{
+.des2 a {
     color: #ff3130;
     text-decoration: none;
     width: 150px;
@@ -243,4 +273,63 @@ html{
     justify-content: center;
     align-items: center;
     background-color: #1e1f21;
+}
+.stafform{
+    background-color:  #1e1f21;
+    height: 17vh;
+    width: 400px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+.stafform img{
+    width: 120px;
+    border-radius: 100px;
+}
+.stafform .text{
+    color: white;
+    font-size: xx-large;
+}
+.staff .founder{
+    color: #ff3130;
+    font-size:xx-large ;
+}
+.staff .admin{
+    color: #ff3130;
+    font-size:xx-large ;
+}
+.staff .stafform a{
+    color: white;
+    font-size:x-large ;
+}
+.staff .co-founder{
+    color: #ff3130;
+    font-size:xx-large ;
+}
+.linea{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.staff2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.staff2 .admin{
+    color: #ff3130;
+    font-size:xx-large ;
+}
+.staff2 .co-founder{
+    color: #ff3130;
+    font-size:xx-large ;
+}
+.linea{
+    display: flex;
+    justify-content: space-around;
+    width: 100vh;
 }
