--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -174,6 +174,7 @@ html {
 
 .des {
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     width: 370px;
