--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -390,39 +390,31 @@ html {
 }
 .sin-1 .uno{
     background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
+    height: 70px;
+    width: 300px;
     justify-content: center;
+    border-radius: 20px;
+    box-shadow: 0 0 30px #ff3130;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-family: "Inter", sans-serif;
+    font-size: x-large;
 }
-.sin-1 .due{
-    background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
-}
-.sin-1 .tre{
-    background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
-}
-.sin-1 .quattro{
-    background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
-}
+
 .cont{
     display: flex;
     align-items: center;
     justify-content: space-around;
-
+    width: 1200px;
 }
 .des-1{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 500px;
+    
 }
 .sin-1{
     display: flex;
@@ -432,26 +424,16 @@ html {
 }
 .des-1 .uno{
     background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
+    height: 70px;
+    width: 300px;
     justify-content: center;
-}
-.des-1 .due{
-    background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
-}
-.des-1 .tre{
-    background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
-}
-.des-1 .quattro{
-    background-color: #2c2f33;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
+    border-radius: 20px;
+    box-shadow: 0 0 30px #ff3130;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-family: "Inter", sans-serif;
+    font-size: x-large;
 }
 
