--- a/style/style.css
+++ b/style/style.css
@@ -268,7 +268,7 @@ html {
     color: white;
     text-decoration: none;
     width: 130px;
-    height: 5vh;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
