--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -443,4 +443,87 @@ html {
     font-family: "Inter", sans-serif;
     font-size: x-large;
 }
+.body-3{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+.container-3{
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    width: 100vh;
+}
+.container-3 .sin-3{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    height: 70vh;
+    width: 300px;
+    border-radius: 30px;
+    background-color: #23272a;
+    box-shadow: 0 0 30px #ff3130;
+
+}
+.container-3 .des-3{
+    display: flex;
+    justify-content: center;
+    height: 70vh;
+    width: 550px;
+    border-radius: 30px;
+    background-color: #23272a;
+    box-shadow: 0 0 30px #ff3130;
+    overflow-y:scroll;
+}
+.giveaway-1{
+    background-color: #2c2f33;
+    height: 12vh;
+    width: 450px;
+    border-radius: 30px;
+    box-shadow: 0 0 30px #ff3130;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+.giveaway-1 .titolo-3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100px;
+}
+.titolo-3 .d{
+    color: #555;
+}
+.titolo-3 .t{
+    font-size: X-large;
+    color: #ff3130;
+}
+.giveaway-1 .stato{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100px;
+    color: green;
+}
+.container-3 .des-3::-webkit-scrollbar-track{
+    background:#ff3130;
+}
+
+.container-3 .des-3::-webkit-scrollbar {
+    width: 10px; /* Larghezza della barra di scorrimento */
+}
+
+.container-3 .des-3::-webkit-scrollbar-track {
+    background: #f1f1f100; /* Colore dello sfondo della barra di scorrimento */
+}
+
+.container-3 .des-3::-webkit-scrollbar-thumb {
+    background: #888; /* Colore del cursore della barra di scorrimento */
+    border-radius: 5px; /* Angoli arrotondati del cursore */
+}
+
+.container-3 .des-3::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Colore del cursore al passaggio del mouse */
+}
 
