--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -277,13 +277,15 @@ html {
     border-radius: 100px;
     box-shadow: 0 0 30px #ff3130;
 }
-.des2 a:hover{
+
+.des2 a:hover {
     width: 135px;
     height: 5.5vh;
     font-size: large;
 }
-.stafform{
-    background-color:  #1e1f21;
+
+.stafform {
+    background-color: #1e1f21;
     height: 17vh;
     width: 400px;
     border-radius: 20px;
@@ -292,75 +294,89 @@ html {
     align-items: center;
     flex-direction: row;
 }
-.stafform img{
+
+.stafform img {
     width: 120px;
     border-radius: 100px;
 }
-.stafform .text{
+
+.stafform .text {
     color: white;
     font-size: xx-large;
 }
-.staff .founder{
+
+.staff .founder {
     color: #ff3130;
-    font-size:xx-large ;
+    font-size: xx-large;
     display: flex;
     justify-content: center;
 }
-.staff .admin{
+
+.staff .admin {
     color: #ff3130;
-    font-size:xx-large ;
+    font-size: xx-large;
     display: flex;
     justify-content: center;
 }
-.staff .stafform a{
+
+.staff .stafform a {
     color: white;
-    font-size:x-large ;
+    font-size: x-large;
 }
-.staff .co-founder{
+
+.staff .co-founder {
     color: #ff3130;
-    font-size:xx-large ;
+    font-size: xx-large;
 }
-.linea{
+
+.linea {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.staff2{
+
+.staff2 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
-.staff2 .admin{
+
+.staff2 .admin {
     color: #ff3130;
-    font-size:xx-large ;
+    font-size: xx-large;
 }
-.staff2 .co-founder{
+
+.staff2 .co-founder {
     color: #ff3130;
-    font-size:xx-large ;
-    
+    font-size: xx-large;
+
 }
-.linea{
+
+.linea {
     display: flex;
     justify-content: space-around;
     width: 100vh;
 }
 
-.linea2{
+.linea2 {
     display: flex;
     justify-content: space-around;
     width: 190vh;
 }
-.body-4{
+
+.body-4 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.body-4 h1{
+
+.body-4 h1 {
     color: white;
 }
-.title-info{
+
+.title-info {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -371,31 +387,37 @@ html {
     box-shadow: 0 0 50px #ff3130;
 
 }
-.title-info h1{
+
+.title-info h1 {
     color: white;
 }
-.title-info img{
+
+.title-info img {
     width: 100px;
     height: 100px;
 }
-.body-2{
+
+.body-2 {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
 }
-.cont{
+
+.cont {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 600px;
 }
-.sin-1{
-   justify-content: space-around;
-   flex-direction: column; 
-   justify-content: center;
+
+.sin-1 {
+    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
 }
-.sin-1 .uno{
+
+.sin-1 .uno {
     background-color: #2c2f33;
     height: 70px;
     width: 300px;
@@ -410,26 +432,29 @@ html {
     font-size: x-large;
 }
 
-.cont{
+.cont {
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 1200px;
 }
-.des-1{
+
+.des-1 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 500px;
-    
+
 }
-.sin-1{
+
+.sin-1 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 500px;
 }
-.des-1 .uno{
+
+.des-1 .uno {
     background-color: #2c2f33;
     height: 70px;
     width: 300px;
@@ -443,21 +468,25 @@ html {
     font-family: "Inter", sans-serif;
     font-size: x-large;
 }
-.body-3{
+
+.body-3 {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
 }
-.container-3{
+
+.container-3 {
     display: flex;
     justify-content: space-around;
-    align-items:center;
+    align-items: center;
     width: 100vh;
 }
-.container-3 .sin-3{
+
+.container-3 .sin-3 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     height: 70vh;
     width: 300px;
     border-radius: 30px;
@@ -465,7 +494,8 @@ html {
     box-shadow: 0 0 30px #ff3130;
 
 }
-.container-3 .des-3{
+
+.container-3 .des-3 {
     display: flex;
     justify-content: center;
     height: 70vh;
@@ -473,9 +503,10 @@ html {
     border-radius: 30px;
     background-color: #23272a;
     box-shadow: 0 0 30px #ff3130;
-    overflow-y:scroll;
+    overflow-y: scroll;
 }
-.giveaway-1{
+
+.giveaway-1 {
     background-color: #2c2f33;
     height: 12vh;
     width: 450px;
@@ -486,44 +517,73 @@ html {
     align-items: center;
     color: white;
 }
-.giveaway-1 .titolo-3{
+
+.giveaway-1 .titolo-3 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 100px;
 }
-.titolo-3 .d{
+
+.titolo-3 .d {
     color: #555;
 }
-.titolo-3 .t{
+
+.titolo-3 .t {
     font-size: X-large;
     color: #ff3130;
 }
-.giveaway-1 .stato{
+
+.giveaway-1 .stato {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 100px;
     color: green;
 }
-.container-3 .des-3::-webkit-scrollbar-track{
-    background:#ff3130;
+
+.container-3 .des-3::-webkit-scrollbar-track {
+    background: #ff3130;
 }
 
 .container-3 .des-3::-webkit-scrollbar {
-    width: 10px; /* Larghezza della barra di scorrimento */
+    width: 10px;
+    /* Larghezza della barra di scorrimento */
 }
 
 .container-3 .des-3::-webkit-scrollbar-track {
-    background: #f1f1f100; /* Colore dello sfondo della barra di scorrimento */
+    background: #f1f1f100;
+    /* Colore dello sfondo della barra di scorrimento */
 }
 
 .container-3 .des-3::-webkit-scrollbar-thumb {
-    background: #888; /* Colore del cursore della barra di scorrimento */
-    border-radius: 5px; /* Angoli arrotondati del cursore */
+    background: #888;
+    /* Colore del cursore della barra di scorrimento */
+    border-radius: 5px;
+    /* Angoli arrotondati del cursore */
 }
 
 .container-3 .des-3::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Colore del cursore al passaggio del mouse */
+    background: #555;
+    /* Colore del cursore al passaggio del mouse */
 }
 
+.title-sin{
+    display: flex;
+    height: 15vh;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+}
+.title-sin a{
+    color: #ff3130;
+    font-size: xx-large;
+}
+.desc-sin{
+    display: flex;
+    height: 55vh;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
