--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -373,7 +373,7 @@ html {
 }
 
 .body-4 h1 {
-    color: white;
+    color: #ff3130;
 }
 
 .title-info {
@@ -454,6 +454,19 @@ html {
     height: 500px;
 }
 
+.sin-1 .uno{
+    cursor: pointer;
+
+}
+.sin-1 .uno:hover{
+    height: 80px;
+    width: 310px;
+}
+.des-1 .uno:hover{
+    height: 80px;
+    width: 310px;
+}
+
 .des-1 .uno {
     background-color: #2c2f33;
     height: 70px;
@@ -467,6 +480,7 @@ html {
     color: white;
     font-family: "Inter", sans-serif;
     font-size: x-large;
+    cursor: pointer;
 }
 
 .body-3 {
@@ -492,7 +506,6 @@ html {
     border-radius: 30px;
     background-color: #23272a;
     box-shadow: 0 0 30px #ff3130;
-
 }
 
 .container-3 .des-3 {
@@ -516,6 +529,12 @@ html {
     justify-content: space-around;
     align-items: center;
     color: white;
+    cursor: pointer;
+}
+
+.giveaway-1:hover{
+    height: 13vh;
+    width: 460px;
 }
 
 .giveaway-1 .titolo-3 {
