--- a/all/src/css/style.css
+++ b/all/src/css/style.css
@@ -11,9 +11,8 @@
 html {
     display: flex;
     transition: 0.4s all ease;
-
-
 }
+
 
 .div {
     transition: 0.4s all ease;
@@ -605,4 +604,13 @@ html {
     justify-content: center;
     align-items: center;
     color: white;
+}
+
+.desc-sin a{
+    text-align: center;
+}
+.evidenziato{
+    background-color: #555;
+    padding: 2px;
+    border-radius: 4px;
 }
